--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ project/local_settings.py
 # Backup files # 
 *.bak 
 
+# Docker/Server/Not Debuging
+docker-compose.yml
+dockerfile
+nginx.conf
+
+
 # If you are using PyCharm # 
 # User-specific stuff
 .idea/**/workspace.xml
